# benchmark

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  TODO.md  build_bench.sh  main.cpp
cmake/: Findbenchmark.cmake  Findlikwid.cmake
example/: CMakeLists.txt  GEMV_With_GBench.cpp  GEMV_With_Likwid.cpp  GEMV_With_PAPI.cpp  GEMV_With_PAPI_Utils.h
include/: ProfilingInfo.h  SWBench.h  SWTensorBench.h  Stats.h  Timer.h  core.h  papi_counters.list  papi_wrapper.h
src/: ProfilingInfo.cpp  SWBench.cpp  SWTensorBench.cpp  Stats.cpp  Timer.cpp  core.cpp  papi_wrapper.cpp
